--- a/KisahManis/CSS/style.css
+++ b/KisahManis/CSS/style.css
@@ -120,6 +120,58 @@ body {
     color: var(--bg);
 }
 
+/* shopping cart */
+.navbar .shopping-cart {
+    position: absolute; /* kalo mo bikin layout aneh" pasti bgini dulu */ 
+    top: 100%;
+    right: -100%;
+    width: 35rem;
+    height: 100vh;
+    padding: 0 1.5rem;
+    color: var(--primary);
+    background-color: antiquewhite;
+    transition: 0.3s;
+}
+
+.navbar .shopping-cart.active {
+    right: 0;
+}
+
+.navbar .shopping-cart .cart-item {
+    margin: 2rem 0;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px dashed #666;
+    position: relative;
+}
+
+.navbar .shopping-cart img {
+    height: 6rem;
+    border-radius: 50%;
+}
+
+.navbar .shopping-cart h3 {
+    font-size: 1.6rem;
+    padding-bottom: 0.5rem;
+}
+
+.navbar .shopping-cart .item-price {
+    font-size: 1.2rem;
+}
+
+.navbar .shopping-cart .remove-item {
+    position: absolute ;
+    right: 1rem;
+    cursor: pointer;
+}
+
+.navbar .shopping-cart .remove-item:hover {
+    color: var(--bg);
+}
+
+
 /* Hero section */
 .hero {
     min-height: 100vh;
@@ -324,7 +376,7 @@ body {
     font-weight: bold;
 }
 
-.products .product-card .product-desc .product-price span {
+.products .product-card .product-desc .product-price span, .modal .product-price span {
     text-decoration: line-through;
     font-weight: lighter;
     font-size: 1rem;
@@ -414,6 +466,79 @@ footer .credit a{
     color: var(--bg);
     font-weight: bold;
 }
+
+/* Modal box */
+
+/* item detail */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    animation: animatemodal 0.5s;
+}
+
+/* modal animation */
+
+@keyframes animatemodal {
+    from {
+        top: -300%;
+        opacity: 0;
+    }
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+.modal-container-A, .modal-container-B, .modal-container-C {
+    position:relative ;
+    background-color: #fefefe;
+    color: var(--bg);
+    margin: 15% auto;
+    padding: 1.2rem;
+    border: 1px solid #666;
+    width: 80%;
+}
+
+.modal-container-A .close-icon-A, .modal-container-B .close-icon-B, .modal-container-C .close-icon-C {
+    position: absolute;
+    right: 1rem;
+    color: var(--primary);
+}
+
+.modal-content {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.modal-content img {
+    height: 15rem;
+    margin-right: 2rem;
+    margin-bottom: 2rem;
+}
+
+.modal-content p{
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    margin-top: 1.2rem;
+}
+
+.modal-content a{
+    display: flex;
+    gap: 1rem;
+    width: 12rem;
+    background-color: var(--primary);
+    color: #fff;
+    margin-top: 1rem;
+    padding: 1rem 1.6rem;
+}
+
 /* Media Queries */
 /* Referensi: Responsive Break Point*/
 
@@ -508,6 +633,14 @@ footer .credit a{
     
     .contact .row form {
         padding-top: 0;
+    }
+
+    .modal-content {
+        flex-wrap: wrap;
+    }
+
+    .modal-content img {
+        height: 20rem;
     }
 }
 /* handphone */
